2008-03-22  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (Mercurial.serveHTTP): another attempt
	to make Mercurial.testCheckoutHTTP not fail on heavily loaded
	machines: avoid overlapping poll() calls.

	* NEWS: preliminary list of changes for the upcoming release.
	Needs editing and explanations.

	* buildbot/status/web/base.py (make_stop_form): add a label=
	argument so that the button says "Stop Builds" or "Stop Build" as
	appropriate. It used to say "Stop Builder", which was wrong.
	* buildbot/status/web/baseweb.py (OneLinePerBuild.body): same
	(OneBoxPerBuilder.body): same

	* buildbot/process/builder.py (Builder): use self.old_building to
	track Builds from a previous version of this Builder and are still
	running. This makes it possible for IBuilderControl to get at
	them, allowing the "Stop Build" button to work after a
	Builder-replacing reconfig. Closes #22.
	(Builder.consumeTheSoulOfYourPredecessor): grab weakrefs from the
	old Builder's self.building attribute, instead of strongrefs,
	since there's no good place to explicitly forget about them.
	(Builder.getBuild): factor this out of BuilderControl

	* buildbot/process/buildstep.py (LogLineObserver.setMaxLineLength):
	new method to override the default 16KiB line length. Lines that
	are longer than this will cause the rest of the log file to be
	ignored. Thanks to Greg Ward for the patch. Closes #201.
	* buildbot/test/test_buildstep.py: new tests for log observers
	* docs/buildbot.texinfo (Adding LogObservers): document it

	* buildbot/slave/commands.py (ShellCommand): record more
	information in the 'header' section: how much we write into stdin,
	do we close stdin, are we using a PTY. There are lingering
	problems with PTYs and with closing stdin (see #198 and #158).
	This doesn't fix those problems, but it should provide more
	information to developers.

	* buildbot/status/client.py: hush pyflakes, log.msg vs log
	* buildbot/status/mail.py: same
