@@ -1,3 +1,12 @@
+2008-03-27  Brian Warner  <warner@lothar.com>
+
+	* buildbot/scripts/runner.py (doCheckConfig): patch from Ben
+	Hearsum to implement 'buildbot checkconfig': validate that your
+	master.cfg is good without actually touching the buildmaster.
+	Closes #37. Thanks!
+	* buildbot/scripts/checkconfig.py: same
+	* docs/buildbot.texinfo (Testing the Config File): document it
+
 2008-03-22  Brian Warner  <warner@lothar.com>
 
 	* buildbot/test/test_vc.py (Mercurial.serveHTTP): another attempt
